Fix the flaky test KioskTest.LaunchAppUserCancel

BUG=624201
TEST=browser_tests --gtest_filter=KioskTest.LaunchAppUserCancel

Review-Url: https://codereview.chromium.org/2107353002
Cr-Commit-Position: refs/heads/master@{#403455}

Former-commit-id: 5933575e915ee8002f604b7f8cdee2b544ea3a5f